data/derived/sp14/progs/unify/prog1666.ml.out
Characters 21-27:
  let _ = makeRand (2, (1, 2));;
                       ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
